# klotski-api

./: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  ]  compose.yaml  diesel.toml  fly.toml
.github/workflows/: ci-cd.yml
migrations/2024-01-31-180112_board_state/: down.sql  up.sql
migrations/2024-01-31-180112_boards/: down.sql  up.sql
migrations/2024-03-06-200303_solutions/: down.sql  up.sql
src/: docs.rs  main.rs
src/errors/: board.rs  domain.rs  game.rs  handler.rs  http.rs  mod.rs
src/handlers/: block.rs  board.rs  mod.rs  utils.rs
src/models/: mod.rs
src/models/api/: request.rs  response.rs
src/models/db/: mod.rs  schema.rs  tables.rs
src/models/domain/: game.rs
src/models/game/: block.rs  blocks.rs  board.rs  mod.rs  move_.rs  moves.rs  utils.rs
src/repositories/: board_states.rs  boards.rs  mod.rs  solutions.rs
src/services/: db.rs  mod.rs  randomizer.rs  solver.rs
